<resources>
	<string name="app_name">学校课表</string>
	<string name="edit">编辑</string>
	<string name="title_today">今日</string>
	<string name="title_schedule">总览</string>
	<string name="title_setting">设置</string>
	<string name="title_activity_oa_login">教务系统登录</string>

	<string name="lesson_name">课程名称</string>
	<string name="lesson_place">上课地点</string>
	<string name="lesson_week">上课周次</string>
	<string name="lesson_time">上课时间</string>
	<string name="lesson_session">上课节次</string>
	<string name="lesson_teacher">任课老师</string>

	<string name="username">用户名</string>
	<string name="password">密码</string>
	<string name="captcha">验证码</string>
	<string name="login">登录</string>
	<string name="relogin">重新登录</string>
	<string name="refresh_captcha">刷新验证码</string>
	<string name="refreshing_captcha">正在刷新验证码</string>
	<string name="oa_login_success">登录成功</string>
	<string name="oa_login_fail">登录失败，请检查用户名、密码、验证码是否正确</string>

	<string name="previous_week">上一周</string>
	<string name="next_week">下一周</string>
	<string name="current_week">当前周次</string>
	<string name="current_week_summary">当前是第 %1$d 周</string>
	<string name="display_setting">显示设置</string>
	<string name="data_sync">数据同步</string>

	<string name="oa_sync">教务系统同步</string>
	<string name="oa_sync_summary_username">已作为 %1$s 登录</string>
	<string name="oa_sync_success">同步成功</string>
	<string name="oa_sync_fail">和教务系统同步失败，请重新同步或重新登录</string>
	<string name="oa_sync_account_logged_in">您已经登录过了教务系统，请问是直接同步还是重新登录？</string>

	<string name="key_setting_current_week">currentWeek</string>
	<string name="key_setting_category_display">categoryDisplay</string>
	<string name="key_setting_category_data_sync">categoryDataSync</string>
	<string name="key_setting_oa_sync">oaSync</string>

	<string name="dow_monday">周一</string>
	<string name="dow_tuesday">周二</string>
	<string name="dow_wednesday">周三</string>
	<string name="dow_thursday">周四</string>
	<string name="dow_friday">周五</string>
	<string name="dow_saturday">周六</string>
	<string name="dow_sunday">周日</string>
	<string-array name="dow">
		<item>gg</item>
		<item>@string/dow_monday</item>
		<item>@string/dow_tuesday</item>
		<item>@string/dow_wednesday</item>
		<item>@string/dow_thursday</item>
		<item>@string/dow_friday</item>
		<item>@string/dow_saturday</item>
		<item>@string/dow_sunday</item>
	</string-array>

	<string-array name="week_repetition_2">
		<item>双周</item>
		<item>单周</item>
	</string-array>
	<string name="week_repetition_more">每隔 %1$d 周</string>

	<string name="lesson_session_formatted">第 %1$d 节到第 %2$d 节</string>
	<string name="lesson_week_formatted">第 %1$d 周到第 %2$d 周</string>
	<string name="lesson_time_week_formatted_1">每%1$s</string>
	<string name="lesson_time_week_formatted">%1$s的%2$s</string>
	<string name="week_repetition_1">每周</string>
	<string name="week_n">第 %1$d 周</string>
</resources>