<?xml version="1.0" encoding="utf-8"?>
<GridLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".ui.schedule.ScheduleFragment"
	android:columnCount="8"
	android:rowCount="13"
	>
	<Space android:layout_row="0" android:layout_column="0" />

	<TextView
		android:text="@string/dow_sunday"
		android:layout_columnWeight="1"
		android:layout_row="0"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:textAppearance="@android:style/TextAppearance.Small"
		/>
	<TextView
		android:text="@string/dow_monday"
		android:layout_columnWeight="1"
		android:layout_row="0"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:textAppearance="@android:style/TextAppearance.Small"
		/>
	<TextView
		android:text="@string/dow_tuesday"
		android:layout_columnWeight="1"
		android:layout_row="0"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:textAppearance="@android:style/TextAppearance.Small"
		/>
	<TextView
		android:text="@string/dow_wednesday"
		android:layout_columnWeight="1"
		android:layout_row="0"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:textAppearance="@android:style/TextAppearance.Small"
		/>
	<TextView
		android:text="@string/dow_thursday"
		android:layout_columnWeight="1"
		android:layout_row="0"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:textAppearance="@android:style/TextAppearance.Small"
		/>
	<TextView
		android:text="@string/dow_friday"
		android:layout_columnWeight="1"
		android:layout_row="0"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:textAppearance="@android:style/TextAppearance.Small"
		/>
	<TextView
		android:text="@string/dow_saturday"
		android:layout_columnWeight="1"
		android:layout_row="0"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:textAppearance="@android:style/TextAppearance.Small"
		/>

	<TextView
		android:text="1"
		android:layout_rowWeight="1"
		android:layout_column="0"
		android:layout_gravity="center_vertical"
		tools:ignore="HardcodedText"
		/>
	<TextView
		android:text="2"
		android:layout_rowWeight="1"
		android:layout_column="0"
		android:layout_gravity="center_vertical"
		tools:ignore="HardcodedText"
		/>
	<TextView
		android:text="3"
		android:layout_rowWeight="1"
		android:layout_column="0"
		android:layout_gravity="center_vertical"
		tools:ignore="HardcodedText"
		/>
	<TextView
		android:text="4"
		android:layout_rowWeight="1"
		android:layout_column="0"
		android:layout_gravity="center_vertical"
		tools:ignore="HardcodedText"
		/>
	<TextView
		android:text="5"
		android:layout_rowWeight="1"
		android:layout_column="0"
		android:layout_gravity="center_vertical"
		tools:ignore="HardcodedText"
		/>
	<TextView
		android:text="6"
		android:layout_rowWeight="1"
		android:layout_column="0"
		android:layout_gravity="center_vertical"
		tools:ignore="HardcodedText"
		/>
	<TextView
		android:text="7"
		android:layout_rowWeight="1"
		android:layout_column="0"
		android:layout_gravity="center_vertical"
		tools:ignore="HardcodedText"
		/>
	<TextView
		android:text="8"
		android:layout_rowWeight="1"
		android:layout_column="0"
		android:layout_gravity="center_vertical"
		tools:ignore="HardcodedText"
		/>
	<TextView
		android:text="9"
		android:layout_rowWeight="1"
		android:layout_column="0"
		android:layout_gravity="center_vertical"
		tools:ignore="HardcodedText"
		/>
	<TextView
		android:text="10"
		android:layout_rowWeight="1"
		android:layout_column="0"
		android:layout_gravity="center_vertical"
		tools:ignore="HardcodedText"
		/>
	<TextView
		android:text="11"
		android:layout_rowWeight="1"
		android:layout_column="0"
		android:layout_gravity="center_vertical"
		tools:ignore="HardcodedText"
		/>
	<TextView
		android:text="12"
		android:layout_rowWeight="1"
		android:layout_column="0"
		android:layout_gravity="center_vertical"
		tools:ignore="HardcodedText"
		/>

</GridLayout>