<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginVertical="@dimen/listitemview_margin"
	>
	<androidx.cardview.widget.CardView
		android:layout_width="match_parent"
		android:layout_height="160dp"
		app:cardBackgroundColor="@color/purple_500"
		app:cardCornerRadius="12dp"
		>
		<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:padding="@dimen/listitemview_margin"
			>
			<TextView
				android:id="@+id/lesson_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lesson_name"
				android:textAppearance="@android:style/TextAppearance.Large.Inverse"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				/>
			<TextView
				android:id="@+id/lesson_place"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lesson_place"
				android:textAppearance="@android:style/TextAppearance.Inverse"
				app:layout_constraintTop_toBottomOf="@id/lesson_title"
				app:layout_constraintLeft_toLeftOf="parent"
				/>
			<TextView
				android:id="@+id/lesson_time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lesson_time"
				android:textAppearance="@android:style/TextAppearance.Small.Inverse"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				/>
		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.cardview.widget.CardView>
</LinearLayout>