<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
	android:layout_marginVertical="@dimen/activity_vertical_margin"
	tools:context=".ui.lesson.LessonShowActivity"
	>

	<androidx.cardview.widget.CardView
		android:id="@+id/container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:cardBackgroundColor="@color/card_background"
		app:cardCornerRadius="15dp"
		app:cardElevation="5dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="20dp"
			>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
				>
				<TextView
					android:id="@+id/lesson_name"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_weight="1"
					android:textAppearance="@android:style/TextAppearance.Large"
					android:text="@string/lesson_name"
					/>

				<Button
					android:id="@+id/edit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:text="@string/edit"
					style="@style/Theme.AppCompat"
					/>
			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:layout_marginTop="5dp"
				android:layout_marginBottom="5dp"
				android:background="@drawable/shape_line"
				/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginVertical="@dimen/lesson_show_card_item_vertical_margin"
				android:orientation="horizontal"
				>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/lesson_show_card_item_inner_horizontal_margin"
					android:text="@string/lesson_place"
					/>
				<TextView
					android:id="@+id/lesson_place"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textColor="@android:color/black"
					android:text="@string/lesson_place"
					/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginVertical="@dimen/lesson_show_card_item_vertical_margin"
				android:orientation="horizontal"
				>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/lesson_show_card_item_inner_horizontal_margin"
					android:text="@string/lesson_week"
					/>
				<TextView
					android:id="@+id/lesson_week"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textColor="@android:color/black"
					android:text="@string/lesson_week"
					/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginVertical="@dimen/lesson_show_card_item_vertical_margin"
				android:orientation="horizontal"
				>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/lesson_show_card_item_inner_horizontal_margin"
					android:text="@string/lesson_time"
					/>
				<TextView
					android:id="@+id/lesson_time"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textColor="@android:color/black"
					android:text="@string/lesson_time"
					/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginVertical="@dimen/lesson_show_card_item_vertical_margin"
				android:orientation="horizontal"
				>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/lesson_show_card_item_inner_horizontal_margin"
					android:text="@string/lesson_session"
					/>
				<TextView
					android:id="@+id/lesson_session"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textColor="@android:color/black"
					android:text="@string/lesson_session"
					/>
			</LinearLayout>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginVertical="@dimen/lesson_show_card_item_vertical_margin"
				android:orientation="horizontal"
				>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/lesson_show_card_item_inner_horizontal_margin"
					android:text="@string/lesson_teacher"
					/>
				<TextView
					android:id="@+id/lesson_teacher"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:layout_weight="1"
					android:textColor="@android:color/black"
					android:text="@string/lesson_teacher"
					/>
			</LinearLayout>

		</LinearLayout>

	</androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>