<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/container"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingHorizontal="@dimen/activity_horizontal_margin"
	android:paddingVertical="@dimen/activity_vertical_margin"
	tools:context=".ui.oalogin.OaLoginActivity"
	>

	<EditText
		android:id="@+id/username"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/form_control_horizontal_margin"
		android:layout_marginTop="96dp"
		android:autofillHints="@string/username"
		android:hint="@string/username"
		android:selectAllOnFocus="true"
		android:inputType="text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		/>

	<EditText
		android:id="@+id/password"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/form_control_horizontal_margin"
		android:layout_marginTop="@dimen/form_control_vertical_margin"
		android:autofillHints="@string/password"
		android:hint="@string/password"
		android:inputType="textPassword"
		android:selectAllOnFocus="true"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/username"
		/>

	<LinearLayout
		android:id="@+id/captcha_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="@dimen/form_control_horizontal_margin"
		android:layout_marginTop="@dimen/form_control_vertical_margin"
		android:orientation="horizontal"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/password"
		>
		<ImageView
			android:id="@+id/image_captcha"
			android:layout_width="0dp"
			android:layout_height="match_parent"
			android:layout_weight="1"
			android:layout_marginEnd="16dp"
			android:contentDescription="@string/captcha"
			android:scaleType="fitCenter"
			/>
		<Button
			android:id="@+id/refresh_captcha"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/refresh_captcha"
			/>
	</LinearLayout>

	<EditText
		android:id="@+id/captcha"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:layout_marginHorizontal="@dimen/form_control_horizontal_margin"
		android:layout_marginTop="@dimen/form_control_vertical_margin"
		android:autofillHints="@string/captcha"
		android:hint="@string/captcha"
		android:imeActionLabel="@string/login"
		android:imeOptions="actionDone"
		android:selectAllOnFocus="true"
		android:inputType="text"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/captcha_container"
		/>

	<Button
		android:id="@+id/login"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="start"
		android:layout_marginStart="48dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="48dp"
		android:layout_marginBottom="64dp"
		android:text="@string/login"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/captcha"
		app:layout_constraintVertical_bias="0.4"
		/>

	<ProgressBar
		android:id="@+id/loading"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:layout_marginStart="32dp"
		android:layout_marginTop="64dp"
		android:layout_marginEnd="32dp"
		android:layout_marginBottom="64dp"
		android:visibility="gone"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="@+id/captcha"
		app:layout_constraintStart_toStartOf="@+id/captcha"
		app:layout_constraintVertical_bias="0.5"
		/>
</androidx.constraintlayout.widget.ConstraintLayout>